--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         
         <div class="valentine-overlay" id="valentineOverlay">
             <div class="valentine-card">
-                <img src="images/qt_cat.gif" alt="Funny cat" class="valentine-gif" />
+                <!-- <img src="images/qt_cat.gif" alt="Funny cat" class="valentine-gif" /> -->
                 <div class="question">
                     Will you be my Valentine?
                 </div>
