--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <div class="valentine-card">
                 <img src="images/qt_cat.gif" alt="Cute cat" class="valentine-gif" />
                 <div class="question">
-                    Will you be my Valentine?
+                    Can I be your Valentine?
                 </div>
             </div>
         </div>
@@ -311,7 +311,7 @@
         // Game state
         let gameRunning = false;
         let score = 0;
-        let blocksLeft = 20;
+        let blocksLeft = 15;
         
         // Ball properties - Still beginner friendly
         let ballRadius;
@@ -324,7 +324,7 @@
         let paddleX, paddleY;
         
         // Blocks - MORE BLOCKS (4x5 grid)
-        let blockRows = 4;
+        let blockRows = 3;
         let blockCols = 5;
         let blockWidth, blockHeight;
         let blockPadding = 3;
